--- a/css/List.css
+++ b/css/List.css
@@ -106,4 +106,12 @@ body{
      pointer-events: auto;
 }
 
+@media (max-width:600px) {
+    .container{
+        margin-top: 30px;
+        width: 75%;
+    }
+}
+
+
 
